[package]
name = "ted_user_cfg"
version = "0.1.0"
authors = ["Czipperz <czipperz@gmail.com>"]

[dependencies]
ted_common_commands = { path = "../ted_common_commands" }
ted_core = { path = "../ted_core" }
ted_git = { path = "../ted_git" }
ted_kill_ring = { path = "../ted_kill_ring" }
ted_mark = { path = "../ted_mark" }
ted_other_window = { path = "../ted_other_window" }
